--- a/.github/workflows/create_documents.yml
+++ b/.github/workflows/create_documents.yml
@@ -6,16 +6,22 @@ on:
       - features/autodeploy
 
 jobs:
-  Publish-CV:
+  Publish-Cookbook:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
 
+      - name: Download emerald font
+        run: |
+          curl -OL https://mirrors.ctan.org/fonts/emerald.zip
+          unzip emerald.zip
+
       - name: Create PDFs
-        uses: xu-cheng/texlive-action/full@v1
+      - uses: xu-cheng/latex-action@v2
         with:
-          run: |
-            pdflatex.exe -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
+          root_file: MyCookbook.tex
+        env:
+          TEXINPUTS: ".:./emerald//:"
 
       - name: Create deploy directory
         run: mkdir deploy
