--- a/.github/workflows/create_documents.yml
+++ b/.github/workflows/create_documents.yml
@@ -11,17 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Download emerald font
-        run: |
-          curl -OL https://mirrors.ctan.org/fonts/emerald.zip
-          unzip emerald.zip
-
       - name: Create PDFs
-        uses: xu-cheng/latex-action@v2
+        uses: xu-cheng/texlive-action/full@v1
         with:
-          root_file: MyCookbook.tex
-        env:
-          TEXINPUTS: ".:./emerald//:"
+          run: |
+            tlmgr install emerald
+            mktexlsr
+            updmap-sys --force --enable Map=emerald.map
+            mktexlsr
+            pdflatex -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
 
       - name: Create deploy directory
         run: mkdir deploy
