--- a/.github/workflows/create_documents.yml
+++ b/.github/workflows/create_documents.yml
@@ -15,9 +15,11 @@ jobs:
         uses: xu-cheng/texlive-action/full@v1
         with:
           run: |
-            tlmgr install emerald
+            curl -OL https://mirrors.ctan.org/fonts/emerald.zip
+            unzip emerald.zip
+            mv -v ./emerald/* ~/texmf/
             mktexlsr
-            updmap-sys --force --enable Map=emerald.map
+            updmap-sys --force --enable Map=~/texmf/fonts/map/dvips/emerald.map
             mktexlsr
             pdflatex -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
 
