--- a/.github/workflows/create_documents.yml
+++ b/.github/workflows/create_documents.yml
@@ -15,15 +15,14 @@ jobs:
         uses: xu-cheng/texlive-action/full@v1
         with:
           run: |
-            kpsewhich --var-value TEXMFLOCAL
             apk add curl
             curl -OL https://mirrors.ctan.org/fonts/emerald.zip
             unzip emerald.zip
-            mv -v ./emerald/* ~/texmf/
+            mv -v ./emerald/*  /opt/texlive/texmf-local/
             mktexlsr
-            updmap-sys --force --enable Map=~/texmf/fonts/map/dvips/emerald.map
+            updmap-sys --force --enable Map= /opt/texlive/texmf-local/fonts/map/dvips/emerald.map
             mktexlsr
-            pdflatex -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
+            xelatex.exe -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
 
       - name: Create deploy directory
         run: mkdir deploy
