--- a/.github/workflows/create_cookbook.yml
+++ b/.github/workflows/create_cookbook.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install TeXtidote
         run: |
           curl -Ol https://github.com/sylvainhalle/textidote/releases/download/v0.8.2/textidote_0.8.2_all.deb
-          apt-get install ./textidote_X.Y.Z_all.deb
+          sudo apt-get install ./textidote_0.8.2_all.deb
 
       - name: Run TeXtidote
         run: |
