--- a/.github/workflows/create_cookbook.yml
+++ b/.github/workflows/create_cookbook.yml
@@ -3,12 +3,24 @@ on:
   push:
     branches:
       - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
   Publish-Cookbook:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Install TeXtidote
+        run: |
+          curl -OL https://github.com/sylvainhalle/textidote/releases/download/v0.8.2/textidote_0.8.2_all.deb
+          sudo apt-get install ./textidote_0.8.2_all.deb
+
+      - name: Run TeXtidote
+        run: |
+          textidote
 
       - name: Create PDFs
         uses: xu-cheng/texlive-action/full@v1
@@ -25,6 +37,7 @@ jobs:
             pdflatex -synctex=1 -interaction=nonstopmode "./MyCookbook".tex
       
       - name: Copy Cookbook
+        if: github.ref == 'refs/heads/main'
         uses: canastro/copy-file-action@master
         with:
           source: "MyCookbook.pdf"
